# mainScriptNodeWinPro

./: CMakeLists.txt  README.md  main.cpp  代码.txt
source/: CMakeLists.txt
source/mainWin/: CMakeLists.txt
source/mainWin/include/: dockWin.h  mainWindow.h
source/mainWin/src/: dockWin.cpp  mainWindow.cpp
source/nodeEditorWin/: CMakeLists.txt
source/nodeEditorWin/include/: NodeConnectionObject.h  NodeEditNamespace.h  NodeEditScene.h  NodeEditorView.h  NodeGraphicsObject.h  NodeLineEditWidget.h  NodePort.h
source/nodeEditorWin/src/: NodeConnectionObject.cpp  NodeEditScene.cpp  NodeEditorView.cpp  NodeGraphicsObject.cpp  NodeLineEditWidget.cpp  NodePort.cpp
source/pyLibs/: CMakeLists.txt
source/pyLibs/include/: PythonNew.h  catchpystd.h
source/pyLibs/src/: catchpystd.cpp
source/scriptEditorWin/: CMakeLists.txt
source/scriptEditorWin/include/: feedbackFrame.h  scriptEditorWidgets.h  scriptTextFrame.h
source/scriptEditorWin/src/: feedbackFrame.cpp  scriptEditorWidgets.cpp  scriptTextFrame.cpp
